<resources>
    <string name="app_name">My Application</string>
    <string name="keyword">My Application</string>

<!-- 作成者：軽野   -->
    <!--    <string name="app_name">testlogin</string>-->
    <!-- Strings related to login -->
    <string name="title_label">あぷふる</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"あぷふるへようこそ！"</string>
    <string name="invalid_username">「@」を使うことはできません</string>
    <string name="invalid_usernamelength">5文字で入力してください</string>
    <string name="invalid_password">6文字以上入力してください</string>
    <string name="login_failed">"Login failed"</string>

    <string name="id_label">ID ※半角英数字</string>
    <string name="password_label">パスワード ※半角</string>
    <string name="newcreate">新規登録</string>
</resources>