<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="70dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".loginScreen"
    android:background="#fff8dc"
    android:orientation="vertical">

    <!-- タイトル「あぷふる」   -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="130dp"

        android:text="@string/title_label"
        android:textSize="50sp"
        android:textColor="#ff7f50"
        android:gravity="center" />

    <!-- ID テキスト -->
    <TextView
        android:id="@+id/idText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="105dp"
        android:text="@string/id_label"
        android:textSize="20sp" />


    <!-- IDの入力フォーム  -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLength="5"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_flame"
        android:paddingLeft="10dp"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
        android:hint="@string/prompt_id"
        app:layout_constraintTop_toBottomOf="@+id/idText" />


    <!-- パスワード　テキスト -->
    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:paddingLeft="105dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_label"
        android:textSize="20sp" />


    <!-- パスワードの入力フォーム  -->
    <EditText
        android:id="@+id/passWord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
        android:maxLength="8"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        android:background="@drawable/edittext_flame"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp" />

    <!-- ログインボタン   -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:backgroundTint="#ff7f50"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/login_button"
        android:textSize="20dp" />

    <!-- 新規登録ボタン   -->
    <Button
        android:id="@+id/createButton"
        android:layout_width="200dp"
        android:backgroundTint="#6495ed"
        android:layout_height="60dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="100dp"
        android:text="@string/create_button"
        android:textSize="10pt"/>


</LinearLayout>
